--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
+.idea
 
-CSharp-101.sln
-WebApplication/.vs/WebApplication/DesignTimeBuild/.dtbcache.v2
-WebApplication/.vs/WebApplication/FileContentIndex/c0c4d613-8c6b-4819-9cfd-5eacb06bde4e.vsidx
-WebApplication/.vs/WebApplication/FileContentIndex/3bc3b4a7-e116-40a9-81ed-98498ac0a5d3.vsidx
-WebApplication/.vs/WebApplication/v17/.suo
-WebApplication/.vs/WebApplication/v17/DocumentLayout.backup.json
-WebApplication/.vs/WebApplication/v17/DocumentLayout.json
-WebApplication/WebApplication.sln
