--- a/KafkaStreamApi/KafkaStreamApi.csproj
+++ b/KafkaStreamApi/KafkaStreamApi.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Confluent.Kafka" Version="2.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+    <PackageReference Include="Serilog" Version="4.2.0" />
   </ItemGroup>
 
 </Project>
