--- a/MinimalApiDemo/MinimalApiDemo.csproj
+++ b/MinimalApiDemo/MinimalApiDemo.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="App.Metrics.AspNetCore" Version="4.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.5" />
+    <PackageReference Include="Steeltoe.Management.EndpointCore" Version="3.2.8" />
   </ItemGroup>
 
 </Project>
