feat: implementação do serviço de autenticação JWT
- Criação do AuthService com geração de tokens JWT reais
- Validação e verificação de expiração de tokens
- Extração de claims (userId, username) dos tokens
- Método para refresh de tokens expirados
- Configuração de chave secreta, issuer e audience
- Adição de dependência Microsoft.AspNetCore.Authentication.JwtBearer
- Tokens válidos por 2 horas com validação segura

--- a/SecurityAndAuthentication/SecurityAndAuthentication.csproj
+++ b/SecurityAndAuthentication/SecurityAndAuthentication.csproj
@@ -9,7 +9,9 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="EFCore" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.7" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
   </ItemGroup>
 
 </Project>
