Add OrderRuleEngine tests and project configuration

--- a/OrderRuleConsole/OrderRuleConsole.csproj
+++ b/OrderRuleConsole/OrderRuleConsole.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <!-- Excluir projeto de testes do build deste projeto para evitar duplicação de assembly attributes e referências ausentes -->
+  <ItemGroup>
+    <Compile Remove="OrderRuleConsole.Tests\**\*.cs" />
+    <EmbeddedResource Remove="OrderRuleConsole.Tests\**\*" />
+    <None Remove="OrderRuleConsole.Tests\**\*" />
+  </ItemGroup>
+
 </Project>
