Remove obsolete solution file and project list

--- a/09-Data/Data/sqlite-sample-api/Properties/launchSettings.json
+++ b/09-Data/Data/sqlite-sample-api/Properties/launchSettings.json
@@ -10,10 +10,18 @@
     "sqlite-sample-api": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:54243/",
+      "sslPort": 44368
     }
   }
 }
